--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+application/views/welcome_message.php
+application/views/welcome_message.php
