--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/results/
 application/views/welcome_message.php
 application/views/welcome_message.php
+application/config/database.php
+
